--- a/ui/views/index.jade
+++ b/ui/views/index.jade
@@ -3,7 +3,7 @@ extends layout
 block content
   .jumbotron
     .container
-      h1 The best yet.
+      h1 With great power there must also come — great responsibility.
       p
         | The Bulbulator is a deployment tool which allows fast environment creation mainly used for testing freshly baked new features. Anyone can deploy on-the-fly a Kinetic environment based on a given code branch.
       p
