--- a/ui/views/new.jade
+++ b/ui/views/new.jade
@@ -9,16 +9,16 @@ block content
       .row
         .col-md-5
 
-          form.form-horizontal(role='form')
+          form.form-horizontal(role='form', method='post', action='/new')
               .form-group
                   label.col-sm-3.control-label(for='repository') Repository
                   .col-sm-6
-                    select#repository.form-control(name='repository', ng-model='repository', ng-options="s.owner.login for s in repositories", ng-change="load.branches(repository);", ng-disabled='!repositories')
+                    select#repository.form-control(name='repository', ng-model='repository', ng-options='s.owner.login for s in repositories', ng-change='load.branches(repository);', ng-disabled='!repositories')
                       option(value='') -- choose repository --
               .form-group
                   label.col-sm-3.control-label(for='branch') Branch
                   .col-sm-6
-                    select#branch.form-control(name='branch', ng-model='branch', ng-options="s.name for s in branches", ng-disabled='!branches', ng-change='commit=branch.commit.sha')
+                    select#branch.form-control(name='branch', ng-model='branch', ng-options='s.name for s in branches', ng-disabled='!branches', ng-change='commit=branch.commit.sha')
                       option(value='') -- choose branch --
               .form-group
                   label.col-sm-3.control-label(for='commit') Commit
@@ -27,13 +27,18 @@ block content
               .form-group
                   label.col-sm-3.control-label(for='website') Website
                   .col-sm-6
-                    select#website.form-control(name='website', ng-model='website', ng-options="s.name for s in websites", ng-change="load.environments(repository, commit, website);", ng-disabled='!websites')
+                    select#website.form-control(name='website', ng-model='website', ng-options='s.name for s in websites', ng-change='load.environments(repository, commit, website);', ng-disabled='!websites')
                       option(value='') -- choose website --
               .form-group
                   label.col-sm-3.control-label(for='environment') Environment
                   .col-sm-6
-                    select#environment.form-control(name='environment', disabled, ng-model='environment', ng-options="s.name for s in environments")
+                    select#environment.form-control(name='environment', disabled, ng-model='environment', ng-options='s.name for s in environments')
                       option(value='') -- choose environment --
+              .form-group
+                  label.col-sm-3.control-label(for='environment') Server
+                  .col-sm-6
+                    select#environment.form-control(ng-model='server', ng-options='s.hostname for s in servers track by s.hostname', ng-disabled='!environment')
+                      option(value='') -- choose server --
 
               .form-group
                 .col-sm-offset-3.col-sm-10
@@ -85,3 +90,4 @@ block content
 
   script.
     window.environments = !{JSON.stringify(environments)};
+    window.servers      = !{JSON.stringify(servers)};
