--- a/ui/views/layout.jade
+++ b/ui/views/layout.jade
@@ -51,6 +51,7 @@ html
     block content
 
     script(src='//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js')
+    script(src='components/socket.io-client/socket.io.js')
     script(src='components/angular/angular.min.js')
     script(src='components/angular-bootstrap/ui-bootstrap-tpls.min.js')
     script(src='components/moment/min/moment.min.js')
