--- a/ui/views/layout.jade
+++ b/ui/views/layout.jade
@@ -5,11 +5,12 @@ html
     meta(charset='utf-8')
     meta(name='viewport', content='width=device-width', initial-scale='1', maximum-scale='1', user-scalable='no')
     link(rel='stylesheet', href='//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css')
+    link(rel='stylesheet', href='//fonts.googleapis.com/css?family=Source+Sans+Pro:400')
     link(rel='stylesheet', href='components/ng-table/ng-table.min.css')
     link(rel='stylesheet', href='stylesheets/main.css')
 
   body(ng-app='bulbulatorApp')
-    .navbar.navbar-inverse.navbar-fixed-top(role='navigation')
+    .navbar.navbar-inverse.navbar-fixed-top(role='navigation', ng-controller='NavbarCtrl')
       .container
           .navbar-header
             button.navbar-toggle(type='button', data-toggle='collapse', data-target='.navbar-collapse')
@@ -24,6 +25,11 @@ html
                 a(href='/environments') List
               li
                 a(href='/new') New
+              li#nav-deployment(ng-show='deploymentCount')
+                a(href='#deployments', ng-click="open()")
+                  | Deployments&nbsp;
+                  span.badge {{deploymentCount}}
+
             if user
               .navbar-right
                 p.navbar-text
@@ -35,6 +41,17 @@ html
             else
               .navbar-form.navbar-right
                  a.btn.btn-success(href='/auth/google', role='button') Sign in
+
+      script(type='text/ng-template', id='modalDeployments.html')
+        .modal-header
+          button.close(type='button', ng-click='close()')
+            span(aria-hidden='true') ×
+            span.sr-only Close
+
+          h3.modal-title Ongoing Deployments
+        .modal-body.stdout
+          ul
+            li(ng-repeat='broadcast in broadcasts', ng-bind-html='broadcast.stdout')
 
     if error_messages.length > 0 || success_messages.length > 0 || warning_messages.length > 0 || info_messages.length > 0
       .container
@@ -56,5 +73,6 @@ html
     script(src='components/angular-bootstrap/ui-bootstrap-tpls.min.js')
     script(src='components/moment/min/moment.min.js')
     script(src='components/angular-moment/angular-moment.js')
+    script(src='components/angular-sanitize/angular-sanitize.min.js')
     script(src='components/ng-table/ng-table.min.js')
     script(src='javascripts/main.js')
