Update email template

--- a/ui/views/templates/html.jade
+++ b/ui/views/templates/html.jade
@@ -1,14 +1,14 @@
 !!! transitional
 html(xmlns='http://www.w3.org/1999/xhtml')
   head
-    // If you delete this meta tag, Half Life 3 will never be released.
+    // If you delete this tag, the sky will fall on your head
     meta(name='viewport', content='width=device-width')
     meta(http-equiv='Content-Type', content='text/html; charset=UTF-8')
     title ZURBemails
     link(rel='stylesheet', type='text/css', href='stylesheets/email.css')
   body(bgcolor='#FFFFFF')
     // HEADER
-    table.head-wrap(bgcolor='#999999')
+    table.head-wrap(bgcolor='#272727')
       tr
         td
         td.header.container
@@ -18,7 +18,7 @@ html(xmlns='http://www.w3.org/1999/xhtml')
                 td
                   img(src='http://placehold.it/200x50/')
                 td(align='right')
-                  h6.collapse Basic
+                  h6.collapse Hero
         td
     // /HEADER
     // BODY
@@ -30,21 +30,31 @@ html(xmlns='http://www.w3.org/1999/xhtml')
             table
               tr
                 td
-                  h3 Hi, Elijah Baily
+                  h3 Welcome, Elijah Baily
                   p.lead
-                    | Phasellus dictum sapien a neque luctus cursus. Pellentesque sem dolor, fringilla et pharetra vitae.
+                    | Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et.
+                  // A Real Hero (and a real human being)
                   p
-                    | Phasellus dictum sapien a neque luctus cursus. Pellentesque sem dolor, fringilla et pharetra vitae. consequat vel lacus. Sed iaculis pulvinar ligula, ornare fringilla ante viverra et. In hac habitasse platea dictumst. Donec vel orci mi, eu congue justo. Integer eget odio est, eget malesuada lorem. Aenean sed tellus dui, vitae viverra risus. Nullam massa sapien, pulvinar eleifend fringilla id, convallis eget nisi. Mauris a sagittis dui. Pellentesque non lacinia mi. Fusce sit amet libero sit amet erat venenatis sollicitudin vitae vel eros. Cras nunc sapien, interdum sit amet porttitor ut, congue quis urna.
+                    img(src='http://placehold.it/600x300')
+                  // /hero
                   // Callout Panel
                   p.callout
-                    | Phasellus dictum sapien a neque luctus cursus. Pellentesque sem dolor, fringilla et pharetra vitae.
-                    a(href='#') Click it! »
+                    | Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.
+                    a(href='#') Do it Now! »
                   // /Callout Panel
+                  h3
+                    | Title Ipsum
+                    small This is a note.
+                  p
+                    | Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                  a.btn Click Me!
+                  br
+                  br
                   // social & contact
                   table.social(width='100%')
                     tr
                       td
-                        // column 1
+                        // - column 1
                         table.column(align='left')
                           tr
                             td
@@ -54,7 +64,7 @@ html(xmlns='http://www.w3.org/1999/xhtml')
                                 a.soc-btn.tw(href='#') Twitter
                                 a.soc-btn.gp(href='#') Google+
                         // /column 1
-                        // column 2
+                        // - column 2
                         table.column(align='left')
                           tr
                             td
@@ -69,7 +79,6 @@ html(xmlns='http://www.w3.org/1999/xhtml')
                         // /column 2
                         span.clear
                   // /social & contact
-          // /content
         td
     // /BODY
     // FOOTER
