UI Milestone 1 reached

--- a/ui/views/templates/notice/html.jade
+++ b/ui/views/templates/notice/html.jade
@@ -102,10 +102,10 @@ html(xmlns='http://www.w3.org/1999/xhtml')
       {
       "@context": "http://schema.org",
       "@type": "EmailMessage",
-      "description": "Description of what is in the email",
+      "description": "Successful deployment notice",
         "action": {
         "@type": "ViewAction",
-        "url": "http[s]://www.magentostore.com/sales/order/view/order_id/1/",
-        "name": "View Order"
+        "url": "http://bulbulator.nexwai.pl/log/#{hash}",
+        "name": "View Log"
         }
       }
